# pkg/apiserver/statement/models.go
@@ -175,6 +175,6 @@ func filterFieldsByColumns(fields []Field, columns []string) []Field {
 type Binding struct {
 	Status     string `json:"status" example:"enabled" enums:"enabled,using,disabled,deleted,invalid,rejected,pending verify"`
 	Source     string `json:"source" example:"manual" enums:"manual,history,capture,evolve"`
-	SqlDigest  string `json:"sql_digest"`
-	PlanDigest string `json:"plan_digest"`
+	SqlDigest  string `json:"-" gorm:"column:Sql_digest"`
+	PlanDigest string `json:"plan_digest" gorm:"column:Plan_digest"`
 }
